--- a/iOS/NavJsSwiftDemo/NavJsSwiftDemo/index.html
+++ b/iOS/NavJsSwiftDemo/NavJsSwiftDemo/index.html
@@ -2,7 +2,7 @@
     <head><title>Hello everybody</title></head>
     <body>
         <p>hello</p>
-        <p><a href="javascript:alert('Hello world')">Alet me</a></p>
+        <p><a href="javascript:alert('Hello world')">Alert me</a></p>
         <p><a target="_blank" href="https://haobtc.com"/>Open me in new window</a> | <a href="https://haobtc.com"/>Open me at the same window</a></p>
     </body>
 </html>
