--- a/iOS/NavJsSwiftDemo/NavJsSwiftDemo/WebRoot/index.html
+++ b/iOS/NavJsSwiftDemo/NavJsSwiftDemo/WebRoot/index.html
@@ -1,7 +1,10 @@
 <html>
     <head><title>Hello everybody</title></head>
+    <script language="javascript" src="demo.js"></script>
     <body>
         <p>hello</p>
+        <p><a href="javascript:runDemo()">Events commute</a></p>
+        <p><a href="javascript:callActionSheet()">ActionSheet</a> <span id="friend">Choosed None</span></p>
         <p><a href="javascript:alert('Hello world')">Alert me</a></p>
         <p><a target="_blank" href="https://haobtc.com"/>Open me in new window</a> | <a href="https://haobtc.com"/>Open me at the same window</a></p>
     </body>
