Added specific activity

--- a/Android/NavJsDemo/app/src/main/res/raw/index.html
+++ b/Android/NavJsDemo/app/src/main/res/raw/index.html
@@ -5,6 +5,6 @@
 <body>
 <p>OK</p>
 <p><a href="javascript:alert(1)">haha</a></p>
-<p><a href="navjs://localhost/url/open?u=http://haobtc.com&tgt=_blank">Click Me</a></a></p>
+<p><a href="navjs://localhost/url/open?u=http://haobtc.com&tgt=_blank&title=waaa">Click Me</a></a></p>
 </body>
 </html>
