Present a view controller

--- a/iOS/NavJsSwiftDemo/NavJsSwiftDemo/WebRoot/index.html
+++ b/iOS/NavJsSwiftDemo/NavJsSwiftDemo/WebRoot/index.html
@@ -6,6 +6,8 @@
         <p><a href="javascript:runDemo()">Events commute</a></p>
         <p><a href="javascript:callActionSheet()">ActionSheet</a> <span id="friend">Choosed None</span></p>
         <p><a href="javascript:alert('Hello world')">Alert me</a></p>
-        <p><a target="_blank" href="https://haobtc.com"/>Open me in new window</a> | <a href="https://haobtc.com"/>Open me at the same window</a></p>
+        <p><a target="_blank" href="https://haobtc.com"/>Open me in new window</a></p>
+        <p><a href="javascript:navjs.open('https://haobtc.com', {trans: 'present'})"/>Present me</a></p>
+        <p><a href="https://haobtc.com"/>Open me at the same window</a></p>
     </body>
 </html>
