Android: implemented all interfaces except menu iOS: rewrote bootstrap.js

--- a/Android/NavJsDemo/app/src/main/res/raw/index.html
+++ b/Android/NavJsDemo/app/src/main/res/raw/index.html
@@ -1,10 +1,13 @@
 <html>
-<head>
-    <title>haha</title>
-</head>
+<head><title>Hello everybody</title></head>
+<script language="javascript" src="demo.js"></script>
 <body>
-<p>OK</p>
-<p><a href="javascript:alert(1)">haha</a></p>
-<p><a href="navjs://localhost/url/open?href=http://haobtc.com&tgt=_blank&title=waaa">Click Me</a></a></p>
+<p>hello</p>
+<p><a href="javascript:runDemo()">Events commute</a></p>
+<p><a href="javascript:callActionSheet()">ActionSheet</a> <span id="friend">Choosed None</span></p>
+<p><a href="javascript:alert('Hello world')">Alert me</a></p>
+<p><a target="_blank" href="https://haobtc.com"/>Open me in new window</a></p>
+<p><a href="javascript:navjs.open('https://haobtc.com', {trans: 'present'})"/>Present me</a></p>
+<p><a href="https://haobtc.com"/>Open me at the same window</a></p>
 </body>
 </html>
