--- a/Android/NavJsDemo/app/src/main/res/raw/index.html
+++ b/Android/NavJsDemo/app/src/main/res/raw/index.html
@@ -4,6 +4,7 @@
 <body>
 <p>hello</p>
 <p><a href="javascript:runDemo()">Events commute</a></p>
+<p><a href="javascript:callAdd()">Call test</a></p>
 <p><a href="javascript:callActionSheet()">ActionSheet</a> <span id="friend">Choosed None</span></p>
 <p><a href="javascript:alert('Hello world')">Alert me</a></p>
 <p><a target="_blank" href="https://haobtc.com"/>Open me in new window</a></p>
